--- a/cable.html
+++ b/cable.html
@@ -11,7 +11,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="css/style1.css">
 
 
@@ -179,7 +179,7 @@
 mx-auto" width="400" height="200" src="images2/page.png" class="img-fluid">
             </div>
    
-        <a class="nav-link" href="/companysite/">
+        <a class="nav-link" href="/index.html">
         <h3 class="text-dark">Back</h3>
     </a>
 
