--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <link rel="stylesheet" href="css/style1.css">
@@ -178,7 +179,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!--img class="bd-placeholder-img" src="8.jpg" class="img-fluid" width="1600" height="400"-->
-                 <img  src="images2/stellar.jpg"   width="1600" height="400" class="img-fluid" alt="Responsive image">
+                 <img class="bd-placeholder-img" src="images2/stellar.jpg"   width="1600" height="400" class="img-fluid" alt="Responsive image">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="carousel-caption text-left">
 
