--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link rel="canonical" href="thestellar.in">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | Emerging leader in X-Ray,Photocopiers(MFPs),Printers,Covid 19 Solutions and HP Series(EPABX) ">
@@ -178,7 +179,7 @@
             <div class="carousel-item active">
                 <img class="bd-placeholder-img" class=" img-fluid" src="images1/bg5.jpeg " width="1600" height="500"  alt="Responsive image">
                 <div class="carousel-caption  d-md-block">
-                    <h2 class="text-dark"><strong>Welcome to THE STELLER</strong></h2>
+                    <h2 ><strong>Welcome to THE STELLER</strong></h2>
                    
                     
 
