--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!--img class="bd-placeholder-img" src="8.jpg" class="img-fluid" width="1600" height="400"-->
-                 <img class="bd-placeholder-img" src="images2/stellar.jpg"   width="1600" height="400" class="img-fluid" alt="Responsive image">
+                 <img class="img-fluid" class="bd-placeholder-img" src="images2/stellar.jpg"   width="1200" height="400"  alt="Responsive image">
                 <div class="row featurette d-flex justify-content-center align-items-center">
                     <div class="carousel-caption text-left">
 
@@ -207,7 +207,7 @@
                         </p>
 
                     </div>
-                    <div class="col-auto d-none d-lg-block">
+                    <div class="col-auto  d-lg-block">
                         <img class="bd-placeholder-img"   class="img-fluid" width="250" height="300" src="images1\e4.jpg"
                             alt="Responsive image">
                     </div>
