--- a/about.html
+++ b/about.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
 <head>
+    <script type="text/javascript">
+        var host="thestellar.in";
+        if((host=window.location.host) && (window.location.protocol !="https:"))
+            window.loaction.protocol="https";
+    </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
        <link rel="canonical" href="thestellar.in"/>
