--- a/air.html
+++ b/air.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
 <head>
+     <script type="text/javascript">
+        var host="thestellar.in";
+        if((host=window.location.host) && (window.location.protocol !="https:"))
+            window.loaction.protocol="https";
+    </script>   
     <!-- Required meta tags -->
     <meta charset="utf-8">
+     <link rel="canonical" href="thestellar.in"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
@@ -177,7 +183,7 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="bd-placeholder-img bd-placeholder-img-lg mx-auto" width="1600" height="600"
+                    <img class="bd-placeholder-img " width="1600" height="600"
                         src="images1/air-purification.jpeg" class="img-fluid">
                     <div class="container">
                         <div class="carousel-caption text-left">
