--- a/airlensCar.html
+++ b/airlensCar.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html lang="en" wtx-context="85E22057-6FDD-4C85-80C5-F63AE3592470">
 <head>
+     <script type="text/javascript">
+        var host="thestellar.in";
+        if((host=window.location.host) && (window.location.protocol !="https:"))
+            window.loaction.protocol="https";
+    </script>   
     <!-- Required meta tags -->
     <meta charset="utf-8">
+     <link rel="canonical" href="thestellar.in"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="Keywords" content="X-Ray,Photocpiers(MFPs),Printers,Covid 19 solutions,Covid 19 Software,HP Series(EPABX)">
     <meta property="og:title" content="The Stellar | One Stop solution that Builds great experiences for your brand ">
@@ -10,6 +16,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <link rel="stylesheet" href="css/style1.css">
@@ -174,7 +181,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item-active">
-                <img class="bd-placeholder-img" width="1600" height="300" src="images1/carair.jpg"
+                <img class="img-fluid" class="bd-placeholder-img" width="1600" height="300" src="images1/carair.jpg"
                     alt="Responsive image">
                 
             </div>
@@ -211,11 +218,11 @@
                 car air purifier with higher efficiency and faster cleaning in comparison.</p>
                 <p> <a href="pdf/Airlens CAS Catalogue.pdf" title="AIRLENS Car Air Sanitizer " target="_blank" class="btn btn-small"
                         href="#">
-                        <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong> AIRLENS Car Air Sanitizer
+                        <img class="img-fluid" src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong> AIRLENS Car Air Sanitizer
                             PDF</strong></a>
                            <a href="pdf/PerSapien_Profile.pdf" title="PerSapien Profile " target="_blank" class="btn btn-small"
                             href="#">
-                            <img src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong> PerSapien Profile
+                            <img class="img-fluid" src="images3/pdficon.png" width="30" height="30" alt="Responsive image"><strong> PerSapien Profile
                                 </strong></a>
                 </p>
                            
