--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="bd-placeholder-img" class=" img-fluid" src="images1/bg5.jpeg " width="1600" height="500"  alt="Responsive image">
-                <div class="carousel-caption  d-md-block">
+                <div class="carousel-caption d-none d-md-block">
                     <h2 ><strong>Welcome to THE STELLER</strong></h2>
                    
                     
@@ -192,7 +192,7 @@
             </div>
             <div class="carousel-item">
                 <img class="bd-placeholder-img" src="images3/network.jpg" width="1600" height="500" class=" img-fluid" alt="Responsive image">
-                <div class="carousel-caption  d-md-block">
+                <div class="carousel-caption d-none d-md-block">
                     <h5>Networking</h5>
                     <p>Think something out of the box!!!.</p>
                     <button class="btn btn-danger">LAN Security</button>
@@ -203,7 +203,7 @@
             </div>
             <div class="carousel-item">
                 <img class="bd-placeholder-img" src="images1/covidsol.jpg" width="1600" height="500" class=" img-fluid" alt="Responsive image">
-                <div class="carousel-caption  d-md-block">
+                <div class="carousel-caption d-none d-md-block">
                     <h5>Covid-19 Solutions</h5>
                     <p>Explore World!!</p>
                     <button class="btn btn-danger">Software</button>
