--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         </p>
 
                     </div>
-                    <div class="col-auto  d-md-block">
+                    <div class="col-auto  d-sm-block">
                         <img class="bd-placeholder-img"  width="250" height="300" src="images1\e4.jpg" class="img-fluid" alt="Responsive image">
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                             end-to-end solutions, on time, on budget and on target.</p>
 
                     </div>
-                    <div class="col-auto  d-md-block">
+                    <div class="col-auto  d-sm-block">
                         <img class="bd-placeholder-img" width="250" height="300" src="images3\news.jpg" class="img-fluid" alt="Responsive image">
                     </div>
                 </div>
