--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                             </li>
                         </ul>
                     </li>
+                     <li> <a href="/network.html">>Network & Security</a></li>
                     <li>
                         <a href="#">Telephony and Unified Communication &nbsp;<span><i
                                     class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
