--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </li>
                     <li> <a href="/camera.html">CCTV & Surveillance</a></li>
                     <li> <a href="/cable.html">Cablings</a></li>
-
+                     <li> <a href="/network.html">Network & Security</a></li>
                 </ul>
             </li>
             <li>
@@ -151,7 +151,7 @@
                             </li>
                         </ul>
                     </li>
-                     <li> <a href="/network.html">>Network & Security</a></li>
+                    
                     <li>
                         <a href="#">Telephony and Unified Communication &nbsp;<span><i
                                     class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
