--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="#">Solutions &nbsp;&nbsp;<span><i class="fa fa-angle-down " aria-hidden="true"></i></span></a>
                 <ul>
                     <li>
-                        <a href="#">Infrastructure &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#">Infrastructure &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
@@ -104,11 +104,11 @@
                     </li>
 
                     <li>
-                        <a href="#"> Covid 19 &nbsp;&nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                        <a href="#"> Covid 19 &nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                     aria-hidden="true"></i></span></a>
 
                         <ul>
-                            <li> <a href="#">ESDS Software &nbsp;&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">ESDS Software &nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/AA.html">AA+ Covid 19 testing AI Software</a></li>
@@ -116,10 +116,10 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Covid Solutions &nbsp;&nbsp;&nbsp;<span><i
+                            <li> <a href="#">Covid Solutions&nbsp;<span><i
                                             class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
                                 <ul>
-                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;&nbsp;<span><i
+                                    <li> <a href="/AA.html">Kiosk Solution&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -128,7 +128,7 @@
 
                                         </ul>
                                     </li>
-                                    <li> <a href="#">Wesafetech Solutions&nbsp;&nbsp;<span><i
+                                    <li> <a href="#">Wesafetech Solutions&nbsp;<span><i
                                                     class="fa fa-angle-down drop-icon"
                                                     aria-hidden="true"></i></span></a>
                                         <ul>
@@ -141,7 +141,7 @@
 
                                 </ul>
                             </li>
-                            <li> <a href="#">Airlens Products&nbsp;&nbsp;<span><i class="fa fa-angle-down drop-icon"
+                            <li> <a href="#">Airlens Products&nbsp;<span><i class="fa fa-angle-down drop-icon"
                                             aria-hidden="true"></i></span></a>
                                 <ul>
                                     <li> <a href="/airlensCar.html"> Airlens Car Air Sanitizer</a></li>
@@ -153,7 +153,7 @@
                     </li>
                     
                     <li>
-                        <a href="#">Telephony and Unified Communication &nbsp;<span><i
+                        <a href="#">Telephony and Unified Communication<span><i
                                     class="fa fa-angle-down drop-icon" aria-hidden="true"></i></span></a>
 
                         <ul>
